--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,7 @@ project/plugins/project/
 .history
 .cache
 .lib/
+*/target/
 
 ### Scala ###
 *.class
@@ -114,3 +115,4 @@ project/plugins/project/
 
 # End of https://www.gitignore.io/api/sbt,scala,intellij,intellij+iml
 
+.idea
