--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Lights-On-Arduino"]
 	path = Lights-On-Arduino
-	url = git@github.com:camilosampedro/Lights-On-Arduino.git
+	url = https://github.com/camilosampedro/Lights-On-Arduino.git
